sfdx-source/main/default/objects/VCC_Workstream_Settings__mdt/VCC_Workstream_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Metadata to capture specific needs and settings per workstream (ex: Meds retrieval time frame)</description>
    <label>VCC Workstream Setting</label>
    <pluralLabel>VCC Workstream Settings</pluralLabel>
</CustomObject>