sfdx-source/main/default/objects/VCC_Workstream_Settings__mdt/fields/Medication_Retrieval_Length_days__c.field-meta.xml
<CustomField>
    <fullName>Medication_Retrieval_Length_days__c</fullName>
    <description>This is the number of days that needs to be subtracted from the current date to bracket how many records are being retrieved from the Meds API.</description>
    <label>Medication Retrieval Length (days)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>