sfdx-source/main/default/objects/VCC_Workstream_Settings__mdt/fields/VCC_Consults_Duration__c.field-meta.xml
<CustomField>
    <fullName>VCC_Consults_Duration__c</fullName>
    <description>This field determines the length of time in months that the component can pull from HDR.</description>
    <label>VCC Consults Duration</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>