sfdx-source/main/default/objects/VCC_Workstream_Settings__mdt/fields/VCC_Problems_Max__c.field-meta.xml
<CustomField>
    <fullName>VCC_Problems_Max__c</fullName>
    <description>Field is used to limit the amount of Problems records returned for initial loads from the Patient Service</description>
    <label>VCC Problems Max</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>