sfdx-source/main/default/objects/VCC_Workstream_Settings__mdt/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <description>This is the name of the workstream that will be mapped to other configuration values</description>
    <label>Workstream</label>
    <length>20</length>
    <type>Text</type>
</CustomField>