sfdx-source/main/default/objects/VCC_Workstream_Settings__mdt/validationRules/VCC_Default_Max_Duration_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>VCC_Default_Max_Duration_Limit</fullName>
    <active>true</active>
    <description>This sets the maximum number of months that non-RN, VCV, PHR, MSA users can retrieve from HDR for the major components</description>
    <errorConditionFormula>DeveloperName = &quot;Default&quot;

&amp;&amp;

OR(
VCC_Allergies_Adverse_Reactions_Duration__c &lt;= 0,
VCC_Allergies_Adverse_Reactions_Duration__c &gt; 240,
VCC_Appointments_Duration__c &lt;= 0,
VCC_Appointments_Duration__c &gt; 240,
VCC_Consults_Duration__c &lt;= 0,
VCC_Consults_Duration__c &gt; 12,
VCC_Directives_Duration__c &lt;= 0,
VCC_Directives_Duration__c &gt; 240,
VCC_Discharge_Summary_Duration__c &lt;= 0,
VCC_Discharge_Summary_Duration__c &gt; 12,
VCC_EHR_Progress_Notes_Duration__c &lt;= 0,
VCC_EHR_Progress_Notes_Duration__c &gt; 12,
VCC_Imaging_Duration__c &lt;= 0,
VCC_Imaging_Duration__c &gt; 36,
VCC_Immunizations_Duration__c &lt;= 0,
VCC_Immunizations_Duration__c &gt; 240,
VCC_Labs_Duration__c &lt;= 0,
VCC_Labs_Duration__c &gt; 12,
VCC_Meds_Duration__c &lt;= 0,
VCC_Meds_Duration__c &gt; 4,
VCC_Orders_Duration__c &lt;= 0,
VCC_Orders_Duration__c &gt; 12,
VCC_Problems_Duration__c &lt;= 0,
VCC_Problems_Duration__c &gt; 240,
VCC_Visits_Duration__c &lt;= 0,
VCC_Visits_Duration__c &gt; 12,
VCC_Vitals_Duration__c &lt;= 0,
VCC_Vitals_Duration__c &gt; 36
)</errorConditionFormula>
    <errorMessage>The default max durations are
Allergies/Adverse Reactions 240 
Appointments 240
Consults 12
Directives 240
Discharge Summary 12
EHR PN 12	 
Imaging 36
Immunizations 240
Labs 12
Meds 4
Orders 12
Problems 240
Visits 12
Vitals 36</errorMessage>
</ValidationRule>